<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@drawable/bottom_border"
    android:paddingVertical="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shimmerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shimmer_auto_start="true"
            app:shimmer_base_color="#ffffff"
            app:shimmer_duration="1000">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/shimmerImagePlaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/rounded_background" />
            </RelativeLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/materialCardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_item_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/container_img"
                    android:minHeight="200dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RelativeLayout
                    android:id="@+id/profileLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_item_photo">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/profileCardView"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:cardCornerRadius="48dp"
                        app:cardElevation="4dp">

                        <ImageView
                            android:id="@+id/profileImage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/profile_image"
                            android:scaleType="centerCrop"
                            android:src="@drawable/profile" />

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:id="@+id/profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/profileCardView"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_item_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_background_transparent"
                            android:paddingHorizontal="4dp"
                            android:paddingVertical="1dp"
                            android:text="@string/user_name"
                            android:textColor="?attr/textFillColor"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/uploadTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:background="@drawable/rounded_background_transparent"
                            android:paddingHorizontal="4dp"
                            android:paddingVertical="1dp"
                            android:text="@string/time_upload"
                            android:textColor="?attr/textFillColor"
                            android:textSize="10sp"
                            android:textStyle="italic"
                            tools:ignore="SmallSp" />
                    </LinearLayout>
                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contentStory"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="6dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:paddingHorizontal="16dp"
        android:text="@string/descriptions_story"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:ignore="RtlSymmetry">

        <!-- Ikon sebelah kiri (start) -->
        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:contentDescription="@string/icon_like"
            android:src="@drawable/like"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/comment"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:contentDescription="@string/icon_comment"
            android:src="@drawable/comment"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/shareButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:contentDescription="@string/icon_share"
            android:src="@drawable/share"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:contentDescription="@string/icon_save"
            android:src="@drawable/save"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</RelativeLayout>
